public_website/static/css/style.css
/* ... */
@media (max-width: 576px) {
    .search-container .mobile-filter-controls {
        display: flex;
        margin-bottom: 1.2rem;
    }

    .search-container .mobile-filter-controls button {
        color: #9B63A8;
        width: 50%;
        border: none;
        font-size: 0.9rem;
        padding: 0.3rem 0;
    }

    .search-container .mobile-filter-controls button:not(:last-child) {
        border-right: 1px solid;
    }
}

/* ======== MANAGE USERS ======== */

.sub-task-section-heading {
    color: #939393;
    margin-top: 1.3rem;
    margin-bottom: 0.5rem;
}

button.update-permissions {
    display: block;
    margin-top: 0.6rem;
}

button.grant-access {
    color: #87B24D;
    background-color: #E4FFBF;
}

button.deny-access {
    color: #bd0606;
    background-color: #ffd6d6;
}

#reviewVolunteerRequestForm {
    margin-top: 1.5rem;
}

/* ========== ANSWER ========== */

.answer {
    min-height: 10rem;
    max-height: calc(100vh - 30rem);
    overflow-y: scroll;
    scrollbar-color: #87B24D #FFFFFF;
    scrollbar-width: thin;
}

/* ======== SUBMIT ANSWER ======== */

.answer-details h1,
.submit-answer-header h1 {
    font-size: 1.7rem;
    margin-top: 2rem;
}

.submit-answer-header .question-meta {
    margin: 1rem 0;
    font-size: 0.9rem;
    color: #666;
}

.submit-answer-header .question-meta span:not(:last-child) {
    border-right: 2px solid #acacac;
    padding-right: 0.5rem;
    margin-right: 0.6rem;
}

/* ====== REVIEW ANSWER ===== */

.answer-details {
    padding-top: 3rem; /* for toolbar */
    padding-left: 5rem;
    background-color: #ffffff;
}

.comment-thread {
    padding-top: 8rem; /* 5rem + 3rem for toolbar */
    padding-right: 5rem;
}

.comment-thread h3 {
    font-weight: bold;
    font-size: 1.2rem;
}

.comment-tile {
    margin-top: 1rem;
    padding: 1rem;
    background-color: #fff;
    border-top: 0.2rem solid #9B63A8;
}

.comment-form textarea {
    border: none;
    border-radius: 0;
    box-shadow: none;

}

/* ======== USER PROFILE ======== */
.profile-header {
    text-align: center;
    margin-bottom: 3rem;
}

@media(max-width: 576px) {
    .profile-header {
        margin-bottom: 1rem;
    }
}

@media(max-width: 576px) {
    .profile-header img {
        width: 70px;
        height: 70px;
    }
}

.profile-header .user-name {
    font-size: 1.7rem;
    margin-top: 0.8rem;
}

@media(max-width: 576px) {
    .profile-header .user-name {
        font-size: 1.2rem;
    }
}

.profile-header .organisation {
    color: #555;
}

@media(max-width: 576px) {
    .profile-header .organisation {
        font-size: 0.9rem;
    }
}

.nav.user-profile-nav {
    justify-content: space-between;
}

.nav.user-profile-nav .nav-link {
    flex-grow: 1;
    border: none;
}

@media (max-width: 576px) {
    .nav.user-profile-nav .nav-link {
        width: 100%;
        font-size: 1.2rem;
    }
}

.nav.user-profile-nav .nav-link img {
    margin-right: 0.4rem;
    border: 2px solid #fff;
    border-radius: 50%;
}

.nav.user-profile-nav .nav-link:hover,
.nav.user-profile-nav .nav-link.active:hover  {
    background-color: #fff;
}

.nav.user-profile-nav .nav-link.active {
    color: #9B63A8;
    border-bottom: none;
}

.nav.user-profile-nav .nav-link.active img {
    border-color: #9B63A8;
}

.tab-content.user-profile-tab-content {
    padding: 2rem 1rem;
    min-height: 50vh;
}

@media(max-width: 576px) {
    .tab-content.user-profile-tab-content {
        padding: 2rem 0.8rem;
    }
}

.tab-content.user-profile-tab-content .empty-tab {
    height: 20vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.tab-content.user-profile-tab-content .empty-tab h3 {
    font-size: 1.2rem;
    color: #8c8c8c;
}

.tab-content.user-profile-tab-content .tab-section {
    width: 70%;
}

@media(max-width: 576px) {
    .tab-content.user-profile-tab-content .tab-section {
        width: 100%;
    }
}

.tab-content.user-profile-tab-content .tab-section:not(:last-child) {
    margin-bottom: 2rem;
    border-bottom: 1px solid #d2d2d2;
    padding-bottom: 2rem;
}

h3.tab-subheading {
    font-size: 1.2rem;
    color: #535353;
    margin-bottom: 0.3rem;
}

p.tab-section-intro {
    color: #a6a6a6;
    margin-bottom: 1.5rem;
}

p.tab-section-status {
    border: 1px solid;
    border-radius: 3px;
    display: inline-block;
    margin-bottom: 0;
    font-size: 0.8rem;
    padding: 0 0.5rem;
}

p.tab-section-status.success {
    color: #87B24D;
    border-color: #87B24D;
}

p.tab-section-status.pending {
    color: #9B63A8;
    border-color: #9B63A8;
}

.tab-content.user-profile-tab-content .tab-section .card-list {
    padding-left: 0;
    margin-top: 1.5rem;
}

.tab-content.user-profile-tab-content .tab-section .card-list li {
    list-style: none;
    box-shadow: #eeecec 0rem 0rem 1rem 0rem;
    padding: 1rem;
    border: 1px solid #f2f2f2;
    border-radius: 5px;
}

.tab-content.user-profile-tab-content .tab-section .card-list li:not(:last-child) {
    margin-bottom: 1rem;
}

.tab-content.user-profile-tab-content .tab-section .card-list li h4 {
    font-size: 1.2rem;
}

.tab-content.user-profile-tab-content .tab-section .card-list li .text-preview {
    font-size: 1.2rem;
}

/* ======== FOOTER ======== */

footer .footer-main {
    color: #ffffff;
    background-color: #414141;
    padding: 4rem 0;
}

@media (max-width: 576px) {
    footer .footer-main {
        font-size: 0.9rem;
    } 
}
/* ... */

